[package]
name = "zappi-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
simple_logger = "4.0.0"
actix-web = "4.3.0"
prometheus = "0.13.3"
actix-web-prom = "0.6.0"
systemstat = "0.2.3"
futures-util = "0.3.23"
reqwest = { version = "0.11", features = ["blocking", "json"] }
config = { version = "0.13.1", features = ["yaml"] }
diqwest = { version = "1.1.1", features = ["blocking"] }
serde_json = "1"