[package]
name = "zappi-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.13.1", features = ["yaml"] }
hyper = { version = "0.14.26", features = ["server", "runtime", "http1", "http2"] }
tokio = { version = "1.27.0", features = ["full"] }
lazy_static = "1.4.0"
prometheus = "0.13.3"
reqwest = { version = "0.11.16", features = ["json"] }
diqwest = { version = "1.1.1" }
serde = "1.0.160"
serde_derive = "1.0.123"
serde_json = "1.0.96"
log = "0.4.17"
env_logger = "0.10.0"
openssl = { version = "0.10.52" }
anyhow = "1.0"
